Add Some minor changes to styling

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <p class="card-text">These languages are the backbone of every website, defining structure, content, and
         presentation.</p>
       <footer class="card-footer">
+        <img src="assets/images/image-avatar.webp" alt="user-avatar">
         <p class="card-author">Greg Hooper</p>
       </footer>
     </section>
