Add hover effects and updated README.md

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <article class="card">
     <section class="card-img-container">
-      <img src="assets/images/illustration-article.svg" alt="" class="card-img">
+      <img src="assets/images/illustration-article.svg" alt="card-image" class="card-img">
     </section>
     <section class="card-body">
       <header class="card-header">
